--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pinia": "^2.1.6",
     "@tailwindcss/forms": "^0.5.5",
+    "axios": "^1.5.0",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
     "autoprefixer": "^10.4.15",
-    "vite": "^4.4.9",
     "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.9"
   }
 }
